@@ -37,6 +37,12 @@ Feature: Project Services
     And I fill Assembla settings
     Then I should see Assembla service settings saved
 
+  Scenario: Activate Slack service
+    When I visit project "Shop" services page
+    And I click Slack service link
+    And I fill Slack settings
+    Then I should see Slack service settings saved
+
   Scenario: Activate email on push service
     When I visit project "Shop" services page
     And I click email on push service link
